<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>de.conciso.shop</groupId>
    <artifactId>starter</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <modules>
        <module>common</module>
        <module>domain-api</module>
        <module>domain-core</module>
        <module>infrastructure</module>
        <module>rest-api</module>
        <module>app</module>
        <module>docker</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <docker-maven-plugin.version>0.45.1</docker-maven-plugin.version>
        <docker-image.openjdk>eclipse-temurin:21-jre-jammy</docker-image.openjdk>
        <docker-image.keycloak>quay.io/keycloak/keycloak:26.1.4</docker-image.keycloak>
        <lombok.version>1.18.36</lombok.version>
        <jgiven-junit5.version>2.0.2</jgiven-junit5.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <skip>true</skip>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>io.fabric8</groupId>
                    <artifactId>docker-maven-plugin</artifactId>
                    <version>${docker-maven-plugin.version}</version>
                    <configuration>
                        <skip>true</skip>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- our modules -->
            <dependency>
                <groupId>de.conciso.shop</groupId>
                <artifactId>common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.conciso.shop</groupId>
                <artifactId>domain-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.conciso.shop</groupId>
                <artifactId>domain-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.conciso.shop</groupId>
                <artifactId>infrastructure</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.conciso.shop</groupId>
                <artifactId>rest-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.conciso.shop</groupId>
                <artifactId>app</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.conciso.shop</groupId>
                <artifactId>docker</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- third party -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.tngtech.jgiven</groupId>
                <artifactId>jgiven-junit5</artifactId>
                <version>${jgiven-junit5.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>com.tngtech.jgiven</groupId>
            <artifactId>jgiven-junit5</artifactId>
        </dependency>
    </dependencies>

</project>
